# udisk-inspector

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  udisk_report.html  vite.config.ts
src/: App.tsx  db.rs  lib.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: drive.rs  mod.rs  report.rs  test.rs
src-tauri/src/disk/: detect.rs  info.rs  mod.rs
src-tauri/src/report/: mod.rs  score.rs
src-tauri/src/test/: common.rs  speed.rs  thermal.rs
src/cli/: mod.rs  output.rs
src/components/: BadBlockMap.tsx  CapacityBar.tsx  DriveCard.tsx  ScoreGauge.tsx  SpeedChart.tsx  StabilityIndicator.tsx  TestProgress.tsx
src/disk/: io.rs
src/hooks/: useDrives.ts  useTest.ts
src/lib/: tauri.ts  types.ts
src/pages/: History.tsx  Home.tsx  Report.tsx  Test.tsx
src/report/: html.rs
src/test/: badblock.rs  capacity.rs  common.rs  mod.rs  speed.rs
