[package]
name = "udisk-inspector"
version = "0.2.0"
description = "U盘质量检测 CLI 工具"
authors = ["you"]
edition = "2021"

[lib]
name = "udisk_inspector_lib"

[[bin]]
name = "udisk-inspector"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
comfy-table = "7"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_Foundation",
  "Win32_System_Ioctl",
] }
wmi = "0.14"
