[package]
name = "udisk-inspector"
version = "0.1.0"
description = "U盘质量检测工具"
authors = ["you"]
edition = "2021"

[lib]
name = "udisk_inspector_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "udisk-inspector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
tauri-plugin-single-instance = "2.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_Foundation",
  "Win32_System_Ioctl",
] }
wmi = "0.14"
